--- a/site/dashboard/pages/admin.ejs
+++ b/site/dashboard/pages/admin.ejs
@@ -23,7 +23,7 @@
     </script>
 </head>
 
-<div class="container-fluid bg">
+<div class="container-fluid bg" style="min-height: 100%;">
     <% include ../partials/nav %>
 
     <div style="  max-height: 1000px;overflow: auto;">
