--- a/site/dashboard/pages/success.ejs
+++ b/site/dashboard/pages/success.ejs
@@ -10,7 +10,7 @@
   </title>
 </head>
 <div class="bg" style="min-height: 100vh;">
-  <% include ../partials/nav %>
+  <% include ../partials/user_nav %>
 
   <div class="center-screen" style="min-height: 50vh;">
     <div class="card text-center text-white bg-dark mb-4 mx-auto"
