--- a/site/dashboard/pages/user.ejs
+++ b/site/dashboard/pages/user.ejs
@@ -30,21 +30,43 @@
         });
     }
 </script>
+<script src="https://js.stripe.com/v3/"></script>
+<script>
+    var stripe = Stripe('<%- stripePublicKey -%>');
+
+    function redirectToCheckout() {
+        stripe.redirectToCheckout({
+            sessionId: '<%- token -%>'
+        }).then(function (result) {
+            // If `redirectToCheckout` fails due to a browser or network
+            // error, display the localized error message to your customer
+            // using `result.error.message`.
+        });
+    }
+</script>
+    <% include ../partials/head %>
+
 </head>
+<div class="bg" style="min-height: 100%;">
+  <% include ../partials/user_nav %>
+
 <body class="body">
-  <div class="columns w-row">
-    <div class="column-2 w-col w-col-6"><img src="../images/Discord-Bot-Pic.png" width="70" alt="Group Logo" class="image"></div>
-    <div class="column w-col w-col-6"><a href="/logout" class="button-3 w-button">Logout</a></div>
-  </div>
   <div>
-    <div class="div-block-3"><img src="../images/logo.png" width="109" srcset="images/logo-p-500.png 500w, images/logo.png 512w" sizes="109px" alt="" class="userimage">
+    <div class="div-block-3"><img src="<%- discord_image -%>" width="109" sizes="109px" alt="" class="userimage">
       <div class="div-block-2"></div>
       <div class="container-2 w-container">
-        <div class="text-block text-block-2">specials#0001</div>
-        <div class="text-block text-block-2-copy"><strong>Key</strong><br>&lt;%= key %&gt;<br>‍<br><span><strong>Type</strong></span><br>&lt;%= type %&gt;<br><br>Next Charge<br>$&lt;%= next_charge_amount %&gt; will be charged on &lt;%= next_charge_date %&gt;<br>‍<br><br></div>
+        <div class="text-block text-block-2"><%- discord_name -%></div>
+        <div class="text-block text-block-2-copy"><strong>Key</strong><br><%- key -%>
+          <br>‍<br><span>
+            <strong>Type</strong></span><br><%- type -%><br>
+            <br><%- next_payment-%><br>‍<br><br></div>
         <div class="columns-2 w-row">
-          <div class="w-col w-col-6"><a onclick="submitButton();" class="button4 w-button">Pause Subscription</a></div>
-          <div class="w-col w-col-6"><a href="/logout" class="button5 w-button">Unbind</a></div>
+          <% if (!subscribed) { %>
+          <div class="w-col w-col-6"><a onclick="redirectToCheckout();" class="button4 w-button"><font color="white">Add Subscription</font></a></div>
+          <% } else { %>
+            <div class="w-col w-col-6"><a onclick="submitButton();" class="button4 w-button"><font color="white">Logout</font></a></div>
+            <% } %>
+          <div class="w-col w-col-6"><a href="/logout" class="button5 w-button">Logout</a></div>
         </div>
       </div>
     </div>
@@ -53,4 +75,5 @@
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
+</div>
 </html>
