--- a/site/dashboard/pages/success.ejs
+++ b/site/dashboard/pages/success.ejs
@@ -19,7 +19,8 @@
         <b>Success!</b>
       </div>
       <div class="card-body h3">
-        Please check your email for your key!
+        Please check your email for your key!<br>
+        <a type="button" class="btn btn-danger" href="/">Done</button>
       </div>
     </div>
   </div>
