--- a/site/dashboard/pages/success.ejs
+++ b/site/dashboard/pages/success.ejs
@@ -20,8 +20,7 @@
       </div>
       <div class="card-body h3">
         Please check your email for your key!<br>
-        <a type="button" class="btn btn-danger" href="/">Done</button>
-      </div>
+        <a href='/' class="btn" style="background-color: #2C2F33;">Done</a>      </div>
     </div>
   </div>
 </div>
