--- a/site/dashboard/pages/success.ejs
+++ b/site/dashboard/pages/success.ejs
@@ -19,8 +19,8 @@
         <b>Success!</b>
       </div>
       <div class="card-body h3">
-        Please check your email for your key!<br>
-        <a href='/' class="btn" style="background-color: #2C2F33;">Done</a>      </div>
+        Please check your email for your key!<br><br>
+        <a href='/' class="btn" style="background-color: #ffffff;"><b>Done</b></a>      </div>
     </div>
   </div>
 </div>
