--- a/site/dashboard/pages/key.ejs
+++ b/site/dashboard/pages/key.ejs
@@ -81,7 +81,7 @@
           <div class="form-group">
             <div class="text-block text-block-2">Key</div>
             <input type="text" class="form-control" name="key" aria-describedby="emailHelp"
-                  placeholder="AAAAA-BBBBB-CCCCC-DDDDD" value="">
+                  placeholder="AAAAA-BBBBB-CCCCC-DDDDD" value="" id="mykey">
               <input type="hidden" id="custId" name="type" value="key">
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
           </div>
