--- a/site/dashboard/pages/test.ejs
+++ b/site/dashboard/pages/test.ejs
@@ -1,8 +1,10 @@
 <html>
     <body>
-        This is your token:<b><%= token %></b>
+        Thank you for your purchase!<br>
+        This is your key: <b><%= token %></b>
+        <br>
+        Please redeem it at <%= hostname %>
     </body>
     <footer>
-        Thank you for shopping at ShivamSingh.com
     </footer>
 </html>
