--- a/site/dashboard/partials/head.ejs
+++ b/site/dashboard/partials/head.ejs
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Reached IO</title>
+<title><%- name -%></title>
 
 <!-- Custom fonts for this theme -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
