--- a/site/dashboard/pages/home.ejs
+++ b/site/dashboard/pages/home.ejs
@@ -10,7 +10,7 @@
 <div class="bg" style="min-height: 100vh;">
   <div class="container-fluid">
     <a class="navbar-brand" href=<%- rootUrl -%>>
-      <img src="./../images/logo.svg" class="float-left img-fluid image-cropper" style="width: 5rem; margin: 2rem;">
+      <img src="<%- logo -%>" class="float-left img-fluid image-cropper" style="width: 5rem; margin: 2rem;">
     </a>
   </div>
 
