--- a/site/dashboard/pages/settings.ejs
+++ b/site/dashboard/pages/settings.ejs
@@ -160,7 +160,7 @@
                     <div class="form-group">
                         <label for="exampleInputPassword1">Group Name</label>
                         <input type="text" class="form-control" name="value" id="brand_color"
-                            placeholder="Group Name" value="<%- brand_color -%>">
+                            placeholder="Group Name" value="<%- name -%>">
                         <input type="hidden" id="custId" name="type" value="group_name">
                     </div>
                     <button type="submit" class="btn btn-primary" style="background-color: #<%- brand_color -%>;">Submit</button>
