--- a/site/dashboard/partials/user_nav.ejs
+++ b/site/dashboard/partials/user_nav.ejs
@@ -1,18 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href=<%- rootUrl -%>>
-        <img src="<%- logo -%>" class="float-right img-fluid image-cropper"
-            style="width: 5rem; margin: 1rem;">
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="<%- logo -%>" width="30" height="30" class="d-inline-block align-top image-cropper" alt="">
+        <%- name -%>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="btn btn-primary nav-link" href="/logout" style="background-color: #<%- brand_color -%>;">Logout</a>
-            </li>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/settings">Settings</a>
+              </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
         </ul>
-    </div>
-</nav>
+      </div>
+  </nav>
 <br>
