--- a/site/dashboard/pages/user.ejs
+++ b/site/dashboard/pages/user.ejs
@@ -2,119 +2,257 @@
 <!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Sun Dec 08 2019 00:02:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5dec0ab8e942e7705f3f8ffc" data-wf-site="5dec0ab8e942e734c53f8ffb">
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Webflow" name="generator">
-  <link href="../css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="../css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="../css/shivams-blank-site-48f618.webflow.css" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Bitter:400,700,400italic"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.png" rel="apple-touch-icon">
-  <script>
-        
-    function submitButton() {
-        $.ajax({
-            type: 'post',
-            url: 'pause-subscription',
-            success: function () {
-                $(".alert").show();
-                document.querySelector('#alert-text').textContent = name;
-                document.querySelector('#date-text').textContent = date;
-            }
-        });
-    }
+  <link href="../css/main.css" rel="stylesheet" type="text/css">
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="../js/user.js" defer></script>
+  <link rel="stylesheet" href="../css/dark-mode.css">
 
-    function logout() {
-      location.href = 'logout';
-    }
-</script>
-<script src="https://js.stripe.com/v3/"></script>
-<script>
-    var stripe = Stripe('<%- stripePublicKey -%>');
-
-    function redirectToCheckout() {
-        stripe.redirectToCheckout({
-            sessionId: '<%- token -%>'
-        }).then(function (result) {
-            // If `redirectToCheckout` fails due to a browser or network
-            // error, display the localized error message to your customer
-            // using `result.error.message`.
-        });
-    }
-</script>
-    <% include ../partials/head %>
+  <% include ../partials/head %>
 
 </head>
-<div class="bg" style="min-height: 100%;">
-  <% include ../partials/user_nav %>
 
-<body class="body">
-  <div>
-    <div class="div-block-3"><img src="<%- discord_image -%>" width="109" sizes="109px" alt="" class="userimage">
-      <div class="div-block-2"></div>
-      <div class="container-2 w-container">
-        <div class="text-block text-block-2"><%- discord_name -%></div>
-        <div class="text-block text-block-2-copy"><strong>Key</strong><br><%- key -%>
-          <br>‍<br><span>
-            <strong>Type</strong></span><br><%- type -%><br>
-            <br><%- next_payment-%><br>‍<br><br></div>
-        <div class="columns-2 w-row">
-          <% if (!subscribed) { %>
-          <div class="w-col w-col-6"><a onclick="redirectToCheckout();" class="button4 w-button"><font color="white">Add Subscription</font></a></div>
-          <% } else { %>
-            <div class="w-col w-col-6"><a onclick="submitButton();" class="button4 w-button"><font color="white">Pause Subscription</font></a></div>
-            <% } %>
-          <div class="w-col w-col-6"><a onclick="logout()" class="button5 w-button"><font color="white">Logout</font></a></div>
+<div class="bg" style="min-height: 100%; align-items: center; align-content: center;" id="background">
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand " href="/">
+      <img src="" width="30" height="30" class="group_image d-inline-block align-top image-cropper" alt="" id="">
+      <div class="group_name" style="display:inline;"></div>
+    </a>
+    <!-- <div class="nav-link ">
+      <div class="custom-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="darkSwitch">
+        <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+      </div>
+    </div> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/settings">Settings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <body class="body">
+    <div class="card text-dark bg-light mb-3" style="margin: 5vw;height: 100%;">
+      <div class="card-body">
+        <!-- <div class="row">
+            <img src="" width="100" height="100" class="group_image d-inline-block align-middle image-cropper"
+              style="margin-left: auto;
+              margin-right: auto;margin-bottom: -3%;position:relative;top: -7vh;z-index: 1;">
+        </div> -->
+        <div class="row">
+          <!-- <div class="card-grid" style="margin: 1vw;"> -->
+          <div class="col mb-4">
+            <div class="card h-100" style="height: 100%;">
+              <div class="card-body">
+                <h1 class="card-title"><img src="" width="40" height="40"
+                    class="d-inline-block align-middle image-cropper" alt="" id="user_image"> <a id="user_name"></a>
+                </h1>
+                <p class="card-text">
+                  <div style="font-size: 200%;">
+                    <a id="user_email"></a>
+                  </div>
+                </p>
+              </div>
+              <div class="card-footer text-muted" style="">
+                Status: <a id="discord_status"></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- No Payment Method -->
+          <div class="col mb-4" style="display:none;" id="link_card_card">
+            <div class="card h-100">
+              <div class="card-body">
+                <h4 class="card-title">You have no linked card</h4>
+                <div>
+                  <button type="button" class="btn btn-success btn-block btn-lg" id="link_card_button"
+                    data-toggle="modal" data-placement="top" title="Click here to link your payment method"
+                    style="min-width: 100%;">Link Payment Method</button>
+                </div>
+              </div>
+              <div class="card-footer text-muted" style="">
+                You will need to link a card before you can make any purchases
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4" style="display:none;" id="remove_card_card">
+            <div class="card h-100">
+              <div class="card-body">
+                <h4 class="card-title">You have a linked card</h4>
+                <button type="button" class="btn btn-danger btn-block btn-lg" id="" data-toggle="modal"
+                  data-placement="top" title="Click here to link your payment method"
+                  data-target="#remove_card_modal">Remove Payment Method</button>
+              </div>
+              <div class="card-footer text-muted" style="">
+                If you remove your card you will not be charged in the future, but may lose your membership
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="unauthenticated col mb-4" style="display: none;">
+            <div class="unauthenticated card h-100" id="" style="display:none;">
+              <div class="card-body">
+                <h4 class="card-title">Purchase Subscription</h4>
+                <button type="button" class="btn btn-success btn-block btn-lg" id="purchase_button" data-toggle="modal"
+                  data-placement="top" title="Click here to purchase a subscription">
+                  Click Here to Purchase
+                </button>
+              </div>
+              <div class="card-footer text-muted">
+                Redirects to the checkout page</a>
+              </div>
+            </div>
+          </div>
+          <!-- Already Paid -->
+          <div class="membership col mb-4" style="display: none;">
+            <div class="membership card" id="" style="display:none;height: 100%;">
+              <div class="row">
+                <div class="col">
+                  <div class="card-body">
+                    <h2 class="card-title">Plan</h2>
+                    <p class="card-text">
+                      <h5>$<a id="plan_price"></a>/Month</h5>
+                    </p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="btn-group-vertical btn-group-lg d-flex" role="group" style="min-height: 100%;">
+                    <button type="button" class="btn btn-success" id="pause_button" data-toggle="modal"
+                      data-placement="top" title="Click here to pause your subscription"
+                      data-target="#pause_subscription_modal">Pause
+                      Subscription</button>
+                    <button type="button" class="btn btn-danger" id="cancel_button" data-toggle="tooltip"
+                      data-placement="top" title="Click here to cancel your subscription">Cancel Subscription</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer text-muted" style="">
+                Status: <a id="plan_status"></a>
+              </div>
+            </div>
+          </div>
+          <div class="unauthenticated col mb-4" style="display:none;" id="input_key_card">
+            <div class="card h-100">
+              <div class="card-body">
+                <h2 class="card-title">Activate Key</h2>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="AAAAA-BBBBB-CCCCC-DDDDD" aria-label="Key"
+                    aria-describedby="input_key_button">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="input_key_button">Activate</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer text-muted" style="">
+                Upon activation you will gain membership to <a class="group_name"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="membership col mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h1 class="card-title"><img src="" width="40" height="40"
+                    class="d-inline-block align-middle image-cropper" alt="" id="user_image"> <a id="user_name"></a>
+                </h1>
+                <p class="card-text">
+                  <div style="font-size: 200%;">
+                    <a id="user_email"></a>
+                  </div>
+                </p>
+              </div>
+              <div class="card-footer text-muted" style="">
+                Status: <a id="discord_status"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="../js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <div class="card-deck" style="width: 80%; padding: 0.5rem; margin: auto;text-align: center;vertical-align: middle;">
-    <div class="card border-primary mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
-      <div class="card-body text-primary">
-        <h5 class="card-title">Primary card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card border-primary mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
-      <div class="card-body text-primary">
-        <h5 class="card-title">Primary card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card border-primary mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
-      <div class="card-body text-primary">
-        <h5 class="card-title">Primary card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
-      <div class="card-body">
-        <h5 class="card-title">Dark card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-  </div>
-</body>
+  </body>
 </div>
+
+<div class="spinner" id="loading"></div>
+
+<div class="modal fade" id="pause_subscription_modal" tabindex="-1" role="dialog" aria-labelledby="Pause Subscription"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Are you sure you want to pause your subscription?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This action will pause your current subscription to <a class="group_name"></a>. You will be able to resume your
+        subscription in the future.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" id="pause_subscription_button">Pause Subscription</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="resume_subscription_modal" tabindex="-1" role="dialog" aria-labelledby="Resume Subscription"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Are you sure you want to resume your subscription?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This action will resume your current subscription to <a class="group_name"></a>. You will be able to pause your
+        subscription in the future.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" id="resume_subscription_button">Resume Subscription</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="remove_card_modal" tabindex="-1" role="dialog" aria-labelledby="Remove Payment Method"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Are you sure you want to remove your payment method?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This action will remove your payment method to <a class="group_name"></a>. You will be able to add another
+        payment method in the future.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" id="remove_card_button">Remove Card</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="../js/dark-mode-switch.min.js"></script>
+
 </html>
